# poker-client/api-docs.yaml
@@ -27,14 +27,66 @@ paths:
       description: Request sent when a player is ready for the game to start.
       operationId: ready
       responses:
+        "403":
+          description: Forbidden.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
         "400":
           description: Bad request.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
+        "200":
+          description: Request handled successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiSuccess'
+  /game/start:
+    post:
+      tags:
+        - game
+      summary: Start Game
+      description: Starts the game, provided all preconditions are satisfied..
+      operationId: startGame
+      responses:
         "403":
           description: Forbidden.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+        "400":
+          description: Bad request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+        "200":
+          description: Game started successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiSuccess'
+  /game/leave-lobby:
+    post:
+      tags:
+        - game
+      summary: Leave Game Lobby
+      description: Request sent when a player leaves a game lobby.
+      operationId: leaveLobby
+      responses:
+        "403":
+          description: Forbidden.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+        "400":
+          description: Bad request.
           content:
             application/json:
               schema:
@@ -59,14 +111,46 @@ paths:
               $ref: '#/components/schemas/ActiveStatus'
         required: true
       responses:
+        "403":
+          description: Forbidden.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
         "400":
           description: Bad request.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
+        "200":
+          description: Creation of game was successful.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiSuccess'
+  /game/create:
+    post:
+      tags:
+        - game
+      summary: Create a new game
+      description: Creates a new game and returns the UUID to the client.
+      operationId: createGame
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GameParameter'
+        required: true
+      responses:
         "403":
           description: Forbidden.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+        "400":
+          description: Bad request.
           content:
             application/json:
               schema:
@@ -91,104 +175,20 @@ paths:
           schema:
             type: string
       responses:
-        "400":
-          description: Bad request.
+        "403":
+          description: Forbidden.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
-        "403":
-          description: Forbidden.
+        "400":
+          description: Bad request.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
         "200":
           description: Game was joined successfully.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiSuccess'
-  /game/create:
-    post:
-      tags:
-        - game
-      summary: Create a new game
-      description: Creates a new game and returns the UUID to the client.
-      operationId: createGame
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/GameParameter'
-        required: true
-      responses:
-        "400":
-          description: Bad request.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiError'
-        "403":
-          description: Forbidden.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiError'
-        "200":
-          description: Creation of game was successful.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiSuccess'
-  /game/leave-lobby:
-    post:
-      tags:
-        - game
-      summary: Leave Game Lobby
-      description: Request sent when a player leaves a game lobby.
-      operationId: leaveLobby
-      responses:
-        "400":
-          description: Bad request.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiError'
-        "403":
-          description: Forbidden.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiError'
-        "200":
-          description: Request handled successfully.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiSuccess'
-  /game/start:
-    post:
-      tags:
-        - game
-      summary: Start Game
-      description: Starts the game, provided all preconditions are satisfied..
-      operationId: startGame
-      responses:
-        "400":
-          description: Bad request.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiError'
-        "403":
-          description: Forbidden.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiError'
-        "200":
-          description: Game started successfully.
           content:
             application/json:
               schema:
@@ -201,14 +201,14 @@ paths:
       description: Draws a card from the top of the deck.
       operationId: draw
       responses:
-        "400":
-          description: Bad request.
+        "403":
+          description: Forbidden.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
-        "403":
-          description: Forbidden.
+        "400":
+          description: Bad request.
           content:
             application/json:
               schema:
@@ -231,20 +231,44 @@ paths:
           schema:
             type: string
       responses:
-        "400":
-          description: Bad request.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiError'
         "403":
           description: Forbidden.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
+        "400":
+          description: Bad request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
         "200":
           description: default response
+  /test/models:
+    get:
+      tags:
+        - test-controller
+      operationId: models
+      responses:
+        "403":
+          description: Forbidden.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+        "400":
+          description: Bad request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+        "200":
+          description: default response
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Models'
   /test/deal:
     get:
       tags:
@@ -258,44 +282,20 @@ paths:
             type: string
             format: uuid
       responses:
-        "400":
-          description: Bad request.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiError'
         "403":
           description: Forbidden.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
-        "200":
-          description: default response
-  /test/models:
-    get:
-      tags:
-        - test-controller
-      operationId: models
-      responses:
         "400":
           description: Bad request.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
-        "403":
-          description: Forbidden.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiError'
         "200":
           description: default response
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Models'
   /user/register:
     post:
       tags:
@@ -310,14 +310,14 @@ paths:
               $ref: '#/components/schemas/NewAccount'
         required: true
       responses:
-        "400":
-          description: Bad request.
+        "403":
+          description: Forbidden.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
-        "403":
-          description: Forbidden.
+        "400":
+          description: Bad request.
           content:
             application/json:
               schema:
@@ -342,14 +342,14 @@ paths:
         schema:
           type: string
       responses:
-        "400":
-          description: Bad request.
+        "403":
+          description: Forbidden.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
-        "403":
-          description: Forbidden.
+        "400":
+          description: Bad request.
           content:
             application/json:
               schema:
@@ -360,39 +360,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ClientUser'
-  /user/auth-with-jwt:
-    post:
-      tags:
-        - users
-      summary: Authenticate With JWT
-      description: If the client has a JWT stored in a cookie, it can call this endpoint
-        to authenticate using the JWT stored in the cookie.
-      operationId: authorizeWithJwt
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/JwtAuthRequest'
-        required: true
-      responses:
-        "400":
-          description: Bad request.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiError'
-        "403":
-          description: Forbidden.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiError'
-        "200":
-          description: Authorization was successful.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AuthResponse'
   /user/auth:
     post:
       tags:
@@ -408,14 +375,14 @@ paths:
               $ref: '#/components/schemas/AuthRequest'
         required: true
       responses:
-        "400":
-          description: Bad request.
+        "403":
+          description: Forbidden.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
-        "403":
-          description: Forbidden.
+        "400":
+          description: Bad request.
           content:
             application/json:
               schema:
@@ -423,6 +390,39 @@ paths:
         "200":
           description: Authorization was successful. A JWT should be returned, which
             can be used to access secured endpoints.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AuthResponse'
+  /user/auth-with-jwt:
+    post:
+      tags:
+        - users
+      summary: Authenticate With JWT
+      description: If the client has a JWT stored in a cookie, it can call this endpoint
+        to authenticate using the JWT stored in the cookie.
+      operationId: authorizeWithJwt
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/JwtAuthRequest'
+        required: true
+      responses:
+        "403":
+          description: Forbidden.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+        "400":
+          description: Bad request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+        "200":
+          description: Authorization was successful.
           content:
             application/json:
               schema:
@@ -436,14 +436,14 @@ paths:
         to one client.
       operationId: getPrivateTopic
       responses:
-        "400":
-          description: Bad request.
+        "403":
+          description: Forbidden.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
-        "403":
-          description: Forbidden.
+        "400":
+          description: Bad request.
           content:
             application/json:
               schema:
@@ -509,6 +509,18 @@ components:
           minimum: 0
           type: number
           description: Buy-in required to play in the game.
+          example: 25
+        startingBlinds:
+          minimum: 0
+          type: number
+          description: The value of the small blind when the game starts.
+          example: 50
+        turnDuration:
+          minimum: 0
+          type: integer
+          description: Amount of time (in seconds) players have to act when it is
+            their turn.
+          format: int32
           example: 25
       description: The parameters of a game.
     AuthRequest:
@@ -796,11 +808,11 @@ components:
           type: boolean
           description: Player bet entire bankroll.
           example: false
-        chips:
+        bet:
           type: number
         toCall:
           type: number
-        bet:
+        chips:
           type: number
       description: Model representing a player in a game.
     GenericServerMessage:
@@ -1094,6 +1106,13 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/GamePlayer'
+        turnDuration:
+          minimum: 0
+          type: integer
+          description: Amount of time (in seconds) players have to act when it is
+            their turn.
+          format: int32
+          example: 25
         actingPlayer:
           type: integer
           description: Position of the player who is acting.
